changing the ui

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
       <div>
         <h1>It Works!</h1>
         <p>Now you can start developing!</p>
+        <p>Keep up the good work!</p>
       </div>
     </div>
   </body>
